# BigVGAN

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_wheels.yml
configs/: bigvgan_22khz_80band.json  bigvgan_24khz_100band.json  bigvgan_base_22khz_80band.json  bigvgan_base_24khz_100band.json  bigvgan_v2_22khz_80band_256x.json  bigvgan_v2_22khz_80band_fmax8k_256x.json  bigvgan_v2_24khz_100band_256x.json  bigvgan_v2_44khz_128band_256x.json  bigvgan_v2_44khz_128band_512x.json
demo/: app.py
filelists/LibriTTS/: parse_libritts.py
src/bigvgan/: bigvgan.py  discriminators.py  env.py  loss.py  meldataset.py  train.py  utils.py
src/bigvgan/alias_free_activation/cuda/: activation1d.py  anti_alias_activation.cpp  anti_alias_activation_cuda.cu  load.py  type_shim.h
src/bigvgan/alias_free_activation/torch/: filter.py  resample.py
tests/: test_activation.py  test_activation_snake_beta.py  test_cuda_vs_torch_model.py
