[project]
name = "bigvgan"
version = "2.4.0"
description = "A universal neural vocoder with large scale training"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "auraloss>=0.4",
    "huggingface-hub>=1.19",
    "librosa>=0.11",
    "matplotlib>=3.11",
    "ninja>=1.13",
    "nnaudio>=0.3",
    "numpy>=2.4",
    "pesq>=0.0",
    "scipy>=1.17",
    "soundfile>=0.14",
    "tensorboard>=2.20",
    "torch==2.11",
    "torchaudio==2.11",
    "tqdm>=4.68",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "black>=26.5.1",
    "isort>=8.0.1",
    "ruff>=0.15.17",
]
