[project]
name = "bigvgan"
version = "2026.6.22"
description = "A universal neural vocoder with large scale training"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=1.19",
    "librosa>=0.11",
    "numpy>=2.4",
    "scipy>=1.17",
    "soundfile>=0.14",
    "torch==2.11",
]

[project.optional-dependencies]
train = [
    "auraloss>=0.4",
    "matplotlib>=3.11",
    "nnaudio>=0.3",
    "pesq>=0.0",
    "tensorboard>=2.20",
    "torchaudio==2.11",
    "tqdm>=4.68",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "black>=26.5.1",
    "isort>=8.0.1",
    "ruff>=0.15.17",
]

[build-system]
requires = [
    "setuptools>=81.0",
    "wheel>=0.47",
    "torch==2.11",
    "numpy>=2.4",
    "ninja>=1.13",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.cpp", "*.cu", "*.h"]
